Prevent game overlay from spilling over nav bar, make game-container grid layout instead of flex

--- a/src/css/common.css
+++ b/src/css/common.css
@@ -10,7 +10,7 @@ body {
 /* Nav */
 .nav-bar {
     position: relative;
-    z-index: 1;
+    z-index: 3;
     display: flex;
     gap: 100px;
     border: none;
