--- a/src/css/local-styles.css
+++ b/src/css/local-styles.css
@@ -11,14 +11,18 @@ main {
   justify-content: center;
   align-items: center;
   height: calc(100vh - 100px);
+  width: 100vw;
+  max-width: 100%;
   position: relative;
 }
 
 /* Game Container */
 #game-container {
-  display: flex;
-  flex-direction: row;
-  position: relative;
+  position: absolute;
+  left: 11%;
+  display: grid;
+  grid-template-columns: auto 738px auto;
+  align-items: center;
   gap: 60px;
 }
 
@@ -33,7 +37,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10;
+  z-index: 2;
 }
 
 #game-overlay.hidden {
@@ -60,10 +64,9 @@ main {
 
 /* Text Box */
 #text-box {
-  position: absolute;
-  left: -470px;
-  top: 45%;
-  transform: translateY(-50%);
+  grid-column: 1;
+  justify-self: end;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -105,10 +108,9 @@ main {
 
 /* Dice */
 #dice-container {
-  position: absolute;
-  top: 50%;
-  left: calc(100% + 20px);
-  transform: translateY(-50%);
+  grid-column: 3;
+  justify-self: start;
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -145,6 +147,9 @@ main {
 
 /* Game Board */
 #board {
+  grid-column: 2;
+  justify-self: center;
+  position: relative;
   display: grid;
   grid-template-columns: repeat(8, 90px);
   grid-template-rows: repeat(8, 90px);
